# 20260309

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
C_example/: celsius2Fahr  celsius2Fahr.c  character  compare.c  compare2.c  fahr2Celcius.c  fourbit  fourbit2  fourbit2.c  genderRatio  hello  limit.c  literal  literal.c  makefile  oddEven  sizeof.c  triangle  triangle.c  triangle2  triangle2.c
C_example/?/: alphabet  alphabet.c  bigLetter  bigLetter.c  charNumber.c  compare  compare2  fourbit.c  genderRatio.c  increment  increment.c  oddEven.c  sizeof  string.c
C_example/part1/: alphabet.c  bigLetter.c  celsius2Fahr.c  charNumber  charNumber.c  compare.c  compare2.c  fahr2Celcius  fahr2Celcius.c  fourbit.c  fourbit2.c  genderRatio.c  increment.c  limit  oddEven.c  passflie2  passflie2.c  sizeof.c  string  string.c  triangle.c  triangle2.c
C_example/part2/: A2Z  A2Z.c  a2bsum  a2bsum.c  arrayinit  arrayinit.c  dice  dice.c  dice2  dice2.c  findMax  findMax.c  lotto  lotto.c  makefile  multiply  multiply.c  one2tensum  one2tensum.c  one2tensumwhile  one2tensumwhile.c  onetotenfor  onetotenfor.c  onetotenwhile  onetotenwhile.c  posZeroNeg  posZeroNeg.c  scoreGrade  scoreGrade.c  scoreGradeSwich  scoreGradeSwich.c  star  star.c  star2  star2.c  sumMatrix  sumMatrix.c  sumarray  sumarray.c  xstar  (+1 more)
C_example/part3/: CMakeLists.txt  add  add.c  arrayassignment  arrayassignment.c  arraycompare  arraycompare.c  bubbleSorting  bubbleSorting.c  localVariable  localVariable.c  pointer1  pointer1.c  pointer2  pointer3  pointer3.c  pointer4  pointer4_doublepointer  pointer4_doublepointer.c  pointer5_functionpointer  pointer5_functionpointer.c  pointer6_voidpointer  pointer6_voidpointer.c  pointerandarray  pointerandarray.c  pointerandarray2  pointerandarray2.c  qsort  qsort.c  selectionSorting  selectionSorting.c  swap  swap.c
C_example/part4/baseballgame/: CMakeLists.txt  baseballGame  baseballGame.c  baseballGame.h  main  main.c  makefile
C_example/part4/carSerial/: CMakeLists.txt  carSerial  main.c  serial.c  serial.h
C_example/part4/myRandom/: CMakeLists.txt  Makefile  main.c  myRandom.c
C_example/part5/: charGetPut  charGetPut.c  charGetPut3  charGetPut3.c  charGetPut4  charGetPut4.c  charGetput2  charGetput2.c  enumexample  enumexample.c  selfreference  selfreference.c  string3  string3.c  stringexample  stringexample.c  struct  struct.c  struct2  struct2.c  struct3_twoDouble  struct3_twoDouble.c  struct3_twoint  struct4_twoDouble  struct4_twoDouble.c  structarray  structarray.c  unionExample  unionExample.c
C_example/part5/date/: CMakeLists.txt  date.c  date.h  main.c
C_example/part5/twoDouble/: CMakeLists.txt  main.c  twoDouble.c  twoDouble.h
C_example/part6/: dynamicAllocation  dynamicAllocation.c  dynamicAllocation2  dynamicAllocation2.c  dynamicAllocation3  dynamicAllocation3.c  dynamicAllocation4  dynamicAllocation4.c  fileDescriptor  fileDescriptor.c  filePointer  filePointer.c  variableLengthArray  variableLengthArray.c
C_example/part6/scoreProcess/: CMakeLists.txt  main  main.c  score.out  scoreProcess.c  scoreProcess.h
atmega128/: CMakeLists.txt  avr-toolchain.cmake
atmega128/lib/lcd/: lcd.c  lcdconf.h
atmega128/lib/uart0/: uart0.c  uart0.h
atmega128/src/: cds.c  cds2.c  cds_fnd.c  dc_motor.c  dc_pwm.c  dc_pwm_vr.c  external_eeprom.c  external_eeprom2.c  fnd1.c  fnd2.c  i2c_tempHumi.c  interrupt1.c  interrupt_fnd.c  lcd1.c  led2.c  led3.c  led4.c  main.c  pir.c  pwmbuzzer.c  pwmled.c  pwmservo.c  pwmservoswitch.c  switch1.c  switch2.c  switch_fnd.c  timer0led.c  timer1com.c  timer2ledleftright.c  uart1.c  uart2.c  uart3.c
ds/bowling/: main  main.c
ds/bowlingT/: board.c  board.h  main.c
ds/list/: list1  list1.c
ds/queue/: queue1.c
ds/queue/myqueue1/: CMakeLists.txt  main.c  myqueue1.c  myqueue1.h  queue1.c
ds/queue/myqueue2/: CMakeLists.txt  main.c  myqueue2.c  myqueue2.h  queue2.c  queue2.h
ds/queue/myqueue3/: CMakeLists.txt  main.c  queue3.c  queue3.h
ds/stack/: stack1  stack1.c
ds/stack/myStack1/: CMakeLists.txt  main.c  stack.c
ds/stack/myStack2/: CMakeLists.txt  main.c  stack2.c  stack2.h
ds/stack/myStack3/: CMakeLists.txt  main.c  stack3.c  stack3.h
ds/stack/myStack4/: CMakeLists.txt  main.c  stack4.c  stack4.h
network/: CMakeLists.txt  mqttPub  mqttPub.c  mqttPubmy  mqttPubmy.c
pico/: CMakeLists.txt
pico/src/mqtt/: CMakeLists.txt  mqtt_client.c
project1/: CMakeCache.txt  CMakeLists.txt  Makefile  TempHumiLight.c  cmake_install.cmake
