cmake_minimum_required(VERSION 3.10)
project(si2026)

set(CMAKE_CXX_STANDARD 17)


add_subdirectory(C_example/part3)
add_subdirectory(C_example/part4/carSerial)
add_subdirectory(C_example/part4/myRandom)
add_subdirectory(C_example/part4/baseballgame)
add_subdirectory(C_example/part5/date)
add_subdirectory(C_example/part5/twoDouble)
