cmake_minimum_required(VERSION 3.10)
set(CMAKE_TOOLCHAIN_FILE "/root/test/atmega128/avr-toolchain.cmake")
project(TempHumiLight_Project C)
set(MCU atmega128)
set(F_CPU 16000000UL)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mmcu=atmega128 -DF_CPU=16000000UL")
add_executable(TempHumiLight.elf TempHumiLight.c)
target_include_directories(TempHumiLight.elf PRIVATE "/root/test/atmega128/lib/lcd" "/root/test/atmega128/lib/sht20")
target_sources(TempHumiLight.elf PRIVATE "/root/test/atmega128/lib/lcd/lcd.c" "/root/test/atmega128/lib/sht20/SHT2x.c" "/root/test/atmega128/lib/sht20/TWI_driver.c")